Bug 299985 - Empty folder selection dialog when starting KMail if Akonadi is stopped
Summary: Empty folder selection dialog when starting KMail if Akonadi is stopped
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: filtering (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-14 09:57 UTC by Christophe Marin
Modified: 2012-06-13 19:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
mailfilters dialog (26.31 KB, image/png)
2012-05-14 09:57 UTC, Christophe Marin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2012-05-14 09:57:19 UTC
Created attachment 71082 [details]
mailfilters dialog

Using master,

Steps to reproduce:

- Create filters,
- Quit KMail/Kontact,
- akonadictl stop,
- akonadictl start

While starting, some empty mailfilters dialogs appear and ask the user where a given filter shall move emails (see screenshot)
Comment 1 Laurent Montel 2012-05-14 10:27:29 UTC
It's when account is not initialized.
I don't know how to fix it for the moment.
Comment 2 Laurent Montel 2012-06-13 19:52:19 UTC
Git commit 2553faf065d4a115dd0b30c1b36fcae7a96af9d8 by Montel Laurent.
Committed on 13/06/2012 at 21:51.
Pushed by mlaurent into branch 'master'.

Fix Bug 299985 - Empty folder selection dialog when starting KMail if

Akonadi is stopped
FIXED-IN: 4.9

M  +15   -2    mailcommon/filter/filtermanager.cpp
M  +4    -0    mailcommon/filter/filtermanager.h

http://commits.kde.org/kdepim/2553faf065d4a115dd0b30c1b36fcae7a96af9d8