Fix Bug 299985 - Empty folder selection dialog when starting KMail if

Akonadi is stopped
FIXED-IN: 4.9
BUG: 299985